[project]
name = "shenas-analysis-core"
dynamic = ["version"]
description = "Shared analysis plugin utilities"
requires-python = ">=3.11"
dependencies = [
    "shenas-app",
    "ibis-framework[duckdb]>=10.0.0",
    "pydantic>=2.12.5",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "analysis-core/v(?P<version>[^+]+)"
raw-options.root = "../../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "analysis-core/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_analyses"]
