[project]
name = "shenas-analysis-suggestion"
dynamic = ["version"]
description = "Analysis suggestion mode: suggest interesting analyses to explore"
requires-python = ">=3.11"
dependencies = [
    "shenas-analysis-core",
]

[project.entry-points."shenas.analyses"]
suggestion = "shenas_analyses.suggestion:SuggestionAnalysis"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
tag-pattern = "analysis-suggestion/v(?P<version>[^+]+)"
raw-options.root = "../../.."
raw-options.git_describe_command = ["git", "describe", "--dirty", "--tags", "--long", "--match", "analysis-suggestion/v*"]

[tool.hatch.build.targets.wheel]
packages = ["shenas_analyses"]
